// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-avatar should render with _label="Erika Maria Mustermann" _src=undefined _color=undefined 1`] = `
<kol-avatar>
  <template shadowrootmode="open">
    <div aria-label="kol-avatar-alt" class="kol-avatar" role="img" style="background-color: #d3d3d3; color: #3f3f3f;">
      <span aria-hidden="true" class="kol-avatar__initials">
        EM
      </span>
    </div>
  </template>
</kol-avatar>
`;

exports[`kol-avatar should render with _label="Erika" _color="#0000FF" 1`] = `
<kol-avatar>
  <template shadowrootmode="open">
    <div aria-label="kol-avatar-alt" class="kol-avatar" role="img" style="background-color: #00f; color: #e6e6ff;">
      <span aria-hidden="true" class="kol-avatar__initials">
        E
      </span>
    </div>
  </template>
</kol-avatar>
`;

exports[`kol-avatar should render with _label="Erika" _src="/image.webp" _color=undefined 1`] = `
<kol-avatar>
  <template shadowrootmode="open">
    <div aria-label="kol-avatar-alt" class="kol-avatar" role="img" style="background-color: #d3d3d3; color: #3f3f3f;">
      <img alt="" aria-hidden="true" class="kol-avatar__image" src="/image.webp">
    </div>
  </template>
</kol-avatar>
`;

exports[`kol-avatar should render with _label="Erika" _src=undefined _color=undefined 1`] = `
<kol-avatar>
  <template shadowrootmode="open">
    <div aria-label="kol-avatar-alt" class="kol-avatar" role="img" style="background-color: #d3d3d3; color: #3f3f3f;">
      <span aria-hidden="true" class="kol-avatar__initials">
        E
      </span>
    </div>
  </template>
</kol-avatar>
`;

exports[`kol-avatar should render with _label="Erika" style={"width":"48px","height":"48px"} 1`] = `
<kol-avatar style="width: 48px; height: 48px;">
  <template shadowrootmode="open">
    <div aria-label="kol-avatar-alt" class="kol-avatar" role="img" style="background-color: #d3d3d3; color: #3f3f3f;">
      <span aria-hidden="true" class="kol-avatar__initials">
        E
      </span>
    </div>
  </template>
</kol-avatar>
`;

exports[`kol-avatar should render with _label="Erika" style={"width":"50px","height":"90px"} 1`] = `
<kol-avatar style="width: 50px; height: 90px;">
  <template shadowrootmode="open">
    <div aria-label="kol-avatar-alt" class="kol-avatar" role="img" style="background-color: #d3d3d3; color: #3f3f3f;">
      <span aria-hidden="true" class="kol-avatar__initials">
        E
      </span>
    </div>
  </template>
</kol-avatar>
`;
